# byte-redis

./: .env  .gitignore  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: connection.rs  database.rs  import_export.rs  keys.rs  mod.rs  response.rs  server.rs
src/api/: connection.ts  database.ts  importExport.ts  index.ts  keys.ts  server.ts  types.ts
src/assets/style/: antd.less  common.less  theme.less
src/components/AddKeyModal/: index.vue
src/components/ConnectionManager/: index.vue
src/components/ConnectionModal/: index.vue
src/components/DatabaseList/: index.vue
src/components/IconButton/: index.vue
src/components/MeuTabs/: MenuItem.vue  index.vue  types.ts
src/components/RedisData/: index.vue
src/components/ServerInfo/: index.vue
src/components/TitleBar/: index.vue
src/config/: index.json
src/layout/: Layout.vue
src/module/AddKeyModal/: AddKeyModal.vue  index.vue
src/module/Connection/: ConnectionManager.vue  ConnectionModal.vue
src/module/ConnectionModule/: ConnectionManager.vue
src/module/Database/: DatabaseManager.vue
src/module/DatabaseModule/: DatabaseManager.vue
src/module/ExportData/: ExportData.vue  index.vue
src/router/: index.ts
src/stores/: theme.ts  useConnectionStore.ts
src/types/: auto-imports.d.ts  components.d.ts  index.ts  redis.ts
src/utils/: format.ts  storage.ts  style.ts
(+33 files in other folders)
